--- a/CycleGan_Pytorch.ipynb
+++ b/CycleGan_Pytorch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Encoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Encoder, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 64, 7, 1,)\n",
-    "        self.conv2 = nn.Conv2d(64, 128, 3, 2)\n",
-    "        self.conv3 = nn.Conv2d(128, 256, 3, 2)\n",
+    "        self.conv1 = nn.Conv2d(3, 64, 7, 1, 1)\n",
+    "        self.conv2 = nn.Conv2d(64, 128, 2, 2)\n",
+    "        self.conv3 = nn.Conv2d(128, 256, 2, 2)\n",
     "        self.bn1 = nn.BatchNorm2d(64)\n",
     "        self.bn2 = nn.BatchNorm2d(128)\n",
     "        \n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Decoder, self).__init__()\n",
-    "        self.conv1 = nn.ConvTranspose2d(256, 128, 3, 2)\n",
-    "        self.conv2 = nn.ConvTranspose2d(128, 64, 3, 2)\n",
-    "        self.conv3 = nn.ConvTranspose2d(64, 3, 7, 1)\n",
+    "        self.conv1 = nn.ConvTranspose2d(256, 128, 2, 2)\n",
+    "        self.conv2 = nn.ConvTranspose2d(128, 64, 2, 2)\n",
+    "        self.conv3 = nn.ConvTranspose2d(64, 3, 7, 1, 1)\n",
     "        self.bn1 = nn.BatchNorm2d(128)\n",
     "        self.bn2 = nn.BatchNorm2d(64)\n",
     "        \n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,25 +198,65 @@
     "        \n",
     "    def forward(self, x):\n",
     "        enc = self.encoder(x)\n",
-    "        print(enc.shape)\n",
     "        trans = self.transformer(enc)\n",
-    "        print(trans.shape)\n",
     "        decoded = self.decoder(trans)\n",
     "        return decoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator = Generator(Encoder(), Transformer(6), Decoder())"
+    "class Discriminator(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Discriminator, self).__init__()\n",
+    "        self.c1 = nn.Conv2d(3, 64, 4, 2, 1) #128\n",
+    "        self.c2 = nn.Conv2d(64, 128, 4, 2, 1) #64\n",
+    "        self.c3 = nn.Conv2d(128, 256, 4, 2, 1) #32\n",
+    "        self.c4 = nn.Conv2d(256, 512, 4, 2, 1) #16\n",
+    "        self.out = nn.Conv2d(512, 1, 16, 1, 0) # 1\n",
+    "        \n",
+    "        self.bn1 = nn.BatchNorm2d(64)\n",
+    "        self.bn2 = nn.BatchNorm2d(128)\n",
+    "        self.bn3 = nn.BatchNorm2d(256)\n",
+    "        self.bn4 = nn.BatchNorm2d(512)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.bn1(self.c1(x)))\n",
+    "        x = F.relu(self.bn2(self.c2(x)))\n",
+    "        x = F.relu(self.bn3(self.c3(x)))\n",
+    "        x = F.relu(self.bn4(self.c4(x)))\n",
+    "        return self.out(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator_a_b = Generator(Encoder(), Transformer(6), Decoder())\n",
+    "generator_b_a = Generator(Encoder(), Transformer(6), Decoder())\n",
+    "discriminator_a = Discriminator()\n",
+    "discriminator_b = Discriminator()\n",
+    "\n",
+    "discriminator_loss = nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -224,16 +264,14 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 3, 256, 256])\n",
-      "torch.Size([1, 256, 61, 61])\n",
-      "torch.Size([1, 256, 61, 61])\n",
-      "torch.Size([1, 3, 253, 253])\n"
+      "torch.Size([1, 1, 1, 1])\n"
      ]
     }
    ],
    "source": [
     "for a, b in dataloader:\n",
     "    print(a.shape)\n",
-    "    print(generator(a).shape)\n",
+    "    print(discriminator(a).shape)\n",
     "    break\n",
     "    "
    ]
